--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   fluttertoast: ^8.0.9
   google_fonts: ^3.0.1
   image_picker: ^0.8.5+3
+  shared_preferences: ^2.0.15
 
 
 dev_dependencies:
