--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^1.20.0
   firebase_auth: ^3.6.2
+  firebase_storage: ^10.3.5
   cloud_firestore: ^3.4.1
   intl: ^0.17.0
   flutter_native_splash: ^2.2.6
@@ -43,6 +44,7 @@ dependencies:
   google_fonts: ^3.0.1
   image_picker: ^0.8.5+3
   shared_preferences: ^2.0.15
+  
 
 
 dev_dependencies:
